MDEV-36825 a new MDEV-32830 assert did not expect Spider's peculiarity

A ha_rollback_trans()
 DBUG_ASSERT(thd->lex->sql_command != SQLCOM_XA_ROLLBACK ||
                thd->transaction->xid_state.is_explicit_XA())
expected an XA sql_command match a XID state. However Spider engine can
visit this function even when Spider is not the xa transaction
participant (sic!) through XA ROLLBACK 'xid' from an external connection.
The assert is refined, at least temporarily to satisfy MDEV-32830 testing,
to let the function run an internal Spider's transaction.